# remakey

./: .gitignore  MANIFEST.in  README.md  custom_layers.py  enums.py  gui_consts.py  key_logger.py  key_logger_commander.py  keyboard.html  package-lock.json  pyproject.toml  remakey.py  remap_layer.py  server.py  setup.py
raycast_extension/remakey/: README.md  package-lock.json
raycast_extension/remakey/src/: remakey.tsx
remakey/: .gitignore  default_config.json  default_config.py  enums.py  gui_consts.py  key_logger.py  key_logger_commander.py  remakey.py  remap_layer.py  server.py  utils.py
remakey/raycast_extension/: package-lock.json
remakey/raycast_extension/remakey/: CHANGELOG.md  package.json
remakey/raycast_extension/remakey/src/: remakey.tsx
remakey/templates/: electron_main.js  keyboard.html  start_electron.sh
