[tool.poetry]
name = "remakey"
version = "0.1.0"
description = "Macos Keyboard remapper"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyobjc-framework-quartz = "^11.0"
pyqt6 = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
